# data-analysis-environment

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: base.yml  deploy-base.yml  deploy-docker-image.yml  deploy-python3-8-with-dependencies.yml  deploy-python3-8.yml  deploy-python3-9-with-dependencies.yml  deploy-python3-9.yml  manual-build-python3-8.yml
base/: Dockerfile
matplotlibrc/: matplotlibrc_article_bw  matplotlibrc_thesis_tum
python3.8/: Dockerfile
python3.8-with-dependencies/: Dockerfile  entrypoint.sh  pyproject.toml
python3.9/: Dockerfile
python3.9-with-dependencies/: Dockerfile  entrypoint.sh  pyproject.toml
tutorials/: taming_figure_size_in_spatial_plots.ipynb
