[tool.poetry]
name = "data_analysis_python_image"
version = "1.0.0"
description = "A data analysis docker image"
authors = ["Michael Wittmann <michael.wittmann@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
SQLAlchemy = "^1.3.22"
loguru = "^0.5.3"
h3 = "^3.7.1"
matplotlib = "^3.3.3"
holidays = "^0.10.4"
joblib = "^1.0.0"
jupyter = "^1.0.0"
mplleaflet = "^0.0.5"
jedi = "^0.17.1"
jupyter-contrib-nbextensions = "^0.5.1"
Shapely = "^1.7.1"
geopandas = "^0.9.0"
scikit-learn = "^0.24.0"
pyproj = "^3.0.0"
psycopg2 = "^2.8.6"
statsmodels = "^0.12.1"
tensorflow = "^2.4.0"
pandas = "^1.2.0"
contextily = "^1.0.1"
jupyter_nbextensions_configurator = "^0.4.1"
tables = "^3.6.1"
tqdm = "^4.56.0"
descartes = "^1.1.0"
folium = "^0.12.1"
seaborn = "^0.11.1"
natsort ="^7.1.1"
tslearn ="^0.5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
